Fixed label alignment

--- a/_assets/css/_theme.scss
+++ b/_assets/css/_theme.scss
@@ -79,6 +79,7 @@ a {
       font-weight: map-get($weights, extra-bold);
       position: relative;
       padding-bottom: 1rem;
+      margin-bottom: 2rem;
 
       &:after {
         content: "";
